--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "repository": "https://github.com/wangkai102/learning-express.git",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.4"
+    "art-template": "^4.13.2",
+    "express": "^4.16.4",
+    "express-art-template": "^1.0.1"
   }
 }
